Assignment 6 UI improvement and NW call implementation.

--- a/app/src/main/res/layout/activity_house_detail.xml
+++ b/app/src/main/res/layout/activity_house_detail.xml
@@ -267,6 +267,7 @@
                     android:textSize = "@dimen/text_regular_2x" />
 
                 <org.mmtextview.components.MMTextView
+                    android:id="@+id/tv_house_desc"
                     android:layout_width = "match_parent"
                     android:layout_height = "wrap_content"
                     android:layout_marginTop = "@dimen/margin_medium"
