--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
                     android:src = "@android:drawable/ic_menu_search" />
 
                 <EditText
+                    android:id="@+id/et_search"
                     android:layout_width = "match_parent"
                     android:layout_height = "wrap_content"
                     android:background = "@android:color/transparent"
