--- a/app/src/main/res/layout/item_house.xml
+++ b/app/src/main/res/layout/item_house.xml
@@ -8,11 +8,11 @@
     <android.support.design.card.MaterialCardView
         android:layout_width = "match_parent"
         android:layout_height = "wrap_content"
-        app:cardElevation="5dp"
         android:layout_marginStart = "@dimen/margin_medium_2"
         android:layout_marginEnd = "@dimen/margin_medium_2"
         android:layout_marginBottom = "@dimen/margin_medium_2"
-        app:cardCornerRadius = "@dimen/corner_material_card">
+        app:cardCornerRadius = "@dimen/corner_material_card"
+        app:cardElevation = "5dp">
 
         <RelativeLayout
             android:layout_width = "match_parent"
@@ -33,6 +33,9 @@
                 android:layout_marginStart = "@dimen/margin_large"
                 android:layout_marginBottom = "@dimen/margin_medium_2"
                 android:background = "@drawable/rounded_white_bg"
+                android:ellipsize = "end"
+                android:maxLines = "1"
+                android:scrollHorizontally = "true"
                 android:textStyle = "bold" />
 
             <android.support.design.widget.FloatingActionButton
@@ -40,8 +43,8 @@
                 android:layout_width = "wrap_content"
                 android:layout_height = "wrap_content"
                 android:layout_alignParentEnd = "true"
+                android:layout_marginTop = "115dp"
                 android:layout_marginEnd = "@dimen/margin_xlarge"
-                android:layout_marginTop="115dp"
                 android:src = "@drawable/ic_near_me"
                 android:tint = "@color/colorPrimary"
                 app:backgroundTint = "@android:color/white" />
@@ -50,9 +53,9 @@
                 android:id = "@+id/layout_loaction"
                 android:layout_width = "match_parent"
                 android:layout_height = "wrap_content"
-                android:layout_above = "@id/layout_area_n_bed"
+                android:layout_below = "@id/img_house"
                 android:layout_marginStart = "@dimen/margin_medium_2"
-                android:layout_marginBottom = "@dimen/margin_medium_2"
+                android:layout_marginTop = "@dimen/margin_medium_2"
                 android:orientation = "horizontal">
 
                 <ImageView
@@ -64,41 +67,64 @@
                     android:id = "@+id/tv_house_location"
                     android:layout_width = "match_parent"
                     android:layout_height = "wrap_content"
-                    android:layout_marginStart = "@dimen/margin_medium" />
+                    android:layout_marginStart = "@dimen/margin_medium"
+                    android:ellipsize = "end"
+                    android:maxLines = "1"
+                    android:scrollHorizontally = "true" />
             </LinearLayout>
 
             <LinearLayout
                 android:id = "@+id/layout_area_n_bed"
                 android:layout_width = "match_parent"
                 android:layout_height = "wrap_content"
-                android:layout_alignParentBottom = "true"
+                android:layout_below = "@id/layout_loaction"
                 android:layout_marginStart = "@dimen/margin_medium_2"
-                android:layout_marginBottom = "@dimen/margin_medium_2"
-                android:orientation = "horizontal">
+                android:layout_marginTop = "@dimen/margin_medium_2"
+                android:orientation = "horizontal"
+                android:weightSum = "2">
 
-                <ImageView
-                    android:layout_width = "wrap_content"
+                <LinearLayout
+                    android:layout_width = "0dp"
                     android:layout_height = "wrap_content"
-                    android:src = "@drawable/ic_selection" />
+                    android:layout_weight = "1"
+                    android:orientation = "horizontal">
 
-                <org.mmtextview.components.MMTextView
-                    android:id = "@+id/tv_house_area"
-                    android:layout_width = "wrap_content"
-                    android:layout_height = "wrap_content"
-                    android:layout_marginStart = "@dimen/margin_medium"
-                    android:layout_marginEnd = "@dimen/margin_xxlarge" />
+                    <ImageView
+                        android:layout_width = "wrap_content"
+                        android:layout_height = "wrap_content"
+                        android:src = "@drawable/ic_selection" />
 
-                <ImageView
-                    android:layout_width = "wrap_content"
-                    android:layout_height = "wrap_content"
-                    android:src = "@drawable/ic_bed" />
+                    <org.mmtextview.components.MMTextView
+                        android:id = "@+id/tv_house_area"
+                        android:layout_width = "match_parent"
+                        android:layout_height = "wrap_content"
+                        android:layout_marginStart = "@dimen/margin_medium"
+                        android:ellipsize = "end"
+                        android:maxLines = "1"
+                        android:scrollHorizontally = "true" />
+                </LinearLayout>
 
-                <org.mmtextview.components.MMTextView
-                    android:id = "@+id/tv_house_bed_rooms"
-                    android:layout_width = "wrap_content"
+                <LinearLayout
+                    android:layout_width = "0dp"
                     android:layout_height = "wrap_content"
-                    android:layout_marginStart = "@dimen/margin_medium"
-                    android:text = "@string/bedroom_text" />
+                    android:layout_weight = "1"
+                    android:orientation = "horizontal">
+
+                    <ImageView
+                        android:layout_width = "wrap_content"
+                        android:layout_height = "wrap_content"
+                        android:src = "@drawable/ic_bed" />
+
+                    <org.mmtextview.components.MMTextView
+                        android:id = "@+id/tv_house_bed_rooms"
+                        android:layout_width = "match_parent"
+                        android:layout_height = "wrap_content"
+                        android:layout_marginStart = "@dimen/margin_medium"
+                        android:ellipsize = "end"
+                        android:maxLines = "1"
+                        android:scrollHorizontally = "true"
+                        android:text = "@string/bedroom_text" />
+                </LinearLayout>
             </LinearLayout>
 
         </RelativeLayout>
